--- a/style.css
+++ b/style.css
@@ -45,12 +45,12 @@ body {
 }
 
 .section__title {
-  max-width: 80rem;
+  max-width: 85rem;
   margin: 0 auto 8rem auto;
 }
 
 .section__description {
-  font-size: 1.8rem;
+  font-size: 1.7rem;
   font-weight: 600;
   text-transform: uppercase;
   color: var(--color-primary);
@@ -122,7 +122,6 @@ img {
   z-index: 100;
 }
 
-/* nav and stickly class at the same time */
 .nav.sticky {
   position: fixed;
   background-color: rgba(255, 255, 255, 0.95);
@@ -198,7 +197,7 @@ h1 {
 }
 
 h4 {
-  font-size: 2.4rem;
+  font-size: 2.3rem;
   font-weight: 500;
 }
 
@@ -275,7 +274,6 @@ h4 {
 }
 
 /* OPERATIONS */
-
 .operations {
   max-width: 100rem;
   margin: 12rem auto 0 auto;
@@ -338,23 +336,29 @@ h4 {
 }
 
 .operations__header {
-  font-size: 2.2rem;
+  font-size: 2.3rem;
   font-weight: 500;
   align-self: center;
 }
 
 .operations__icon {
   display: flex;
-  align-self: center;
+  align-items: center;
   justify-content: center;
-  height: 7rem;
-  width: 7rem;
+  min-height: 7rem;
+  min-width: 7rem;
   border-radius: 50%;
-  margin: 1em;
+  margin: 1rem;
+}
+
+.operations__icon img {
+  height: 4rem;
+  width: 4rem;
 }
 
 .options__container {
   display: flex;
+  gap: 4rem;
 }
 
 .operations__icon--1 {
@@ -367,4 +371,212 @@ h4 {
 
 .operations__icon--3 {
   background-color: var(--color-tertiary-opacity);
+}
+
+/* SLIDER */
+.slider {
+  max-width: 100rem;
+  height: 50rem;
+  margin: 0 auto;
+  position: relative;
+  overflow: hidden;
+}
+
+.slide {
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 50rem;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  /* animation */
+  transition: transform 1s;
+}
+
+.slide > img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.slider__btn {
+  position: absolute;
+  top: 50%;
+  z-index: 10;
+
+  border: none;
+  background: rgba(255, 255, 255, 0.7);
+  font-family: inherit;
+  color: #333;
+  border-radius: 50%;
+  height: 5rem;
+  width: 5rem;
+  font-size: 3.3rem;
+  cursor: pointer;
+}
+
+.slider__btn--left {
+  left: 5%;
+  transform: translate(-50%, -50%);
+}
+
+.slider__btn--right {
+  right: 5%;
+  transform: translate(50%, -50%);
+}
+
+.dots {
+  position: absolute;
+  bottom: 5%;
+  left: 50%;
+  transform: translateX(-50%);
+  display: flex;
+}
+
+.dots__dot {
+  border: none;
+  background-color: #b9b9b9;
+  opacity: 0.7;
+  height: 1rem;
+  width: 1rem;
+  border-radius: 50%;
+  cursor: pointer;
+  transition: all 0.5s;
+}
+
+.dots__dot:last-child {
+  margin: 0;
+}
+
+.dots__dot--active {
+  background-color: #888;
+  opacity: 1;
+}
+
+/* TESTIMONIAL */
+.testimonial {
+  width: 65%;
+  position: relative;
+}
+
+.testimonial::before {
+  content: "\201C";
+  position: absolute;
+  top: -5.7rem;
+  left: -6.8rem;
+  line-height: 1;
+  font-size: 20rem;
+  font-family: inherit;
+  color: var(--color-primary);
+  z-index: -1;
+}
+
+.testimonial__header {
+  font-size: 2.3rem;
+  font-weight: 500;
+  margin-bottom: 1.5rem;
+}
+
+.testimonial__text {
+  font-size: 1.7rem;
+  margin-bottom: 3.5rem;
+  color: #666;
+}
+
+.testimonial__author {
+  margin-left: 3rem;
+  font-style: normal;
+
+  display: grid;
+  grid-template-columns: 6.5rem 1fr;
+  column-gap: 2rem;
+}
+
+.testimonial__photo {
+  grid-row: 1 / span 2;
+  width: 6.5rem;
+  border-radius: 50%;
+}
+
+.testimonial__name {
+  font-size: 1.7rem;
+  font-weight: 500;
+  align-self: end;
+  margin: 0;
+}
+
+.testimonial__location {
+  font-size: 1.5rem;
+}
+
+.section__title--testimonials {
+  margin-bottom: 4rem;
+}
+
+/* SIGNUP */
+.section--sign-up {
+  background-color: #37383d;
+  border-top: none;
+  border-bottom: 1px solid #444;
+  text-align: center;
+  padding: 10rem 3rem;
+}
+
+.section--sign-up .section__header {
+  color: #fff;
+  text-align: center;
+}
+
+.section--sign-up .section__title {
+  margin-bottom: 6rem;
+}
+
+.section--sign-up .btn {
+  font-size: 1.9rem;
+  padding: 2rem 5rem;
+}
+
+/* FOOTER */
+.footer {
+  padding: 10rem 3rem;
+  background-color: #37383d;
+}
+
+.footer__nav {
+  list-style: none;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 5rem;
+}
+
+.footer__item {
+  margin-right: 4rem;
+}
+
+.footer__link {
+  font-size: 1.7rem;
+  color: #eee;
+  text-decoration: none;
+}
+
+.footer__container--logo {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.footer__logo {
+  height: 15rem;
+  display: block;
+  margin: 0;
+  margin-bottom: 5rem;
+}
+
+.footer__copyright {
+  font-size: 1.5rem;
+  color: #aaa;
+  text-align: center;
 }
